添加weblogic安装方式